// Agent API provides CRUD operations for managing AI agents within Construct.
// Agents are autonomous AI entities that can perform tasks, execute code, and interact
// with users based on their configured instructions and model capabilities.
syntax = "proto3";

package construct.v1;

import "buf/validate/validate.proto";
import "construct/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/furisto/construct/api/go/v1";

// AgentService provides operations for managing AI agents.
// Agents are configurable AI entities that can execute tasks, run code,
// and interact with users based on their instructions and assigned models.
service AgentService {
  // CreateAgent creates a new agent with the specified configuration.
  rpc CreateAgent(CreateAgentRequest) returns (CreateAgentResponse) {}

  // GetAgent retrieves a specific agent by its unique identifier.
  rpc GetAgent(GetAgentRequest) returns (GetAgentResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // ListAgents retrieves a list of agents with optional filtering and pagination.
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // UpdateAgent modifies an existing agent's configuration.
  rpc UpdateAgent(UpdateAgentRequest) returns (UpdateAgentResponse) {}

  // DeleteAgent removes an agent from the system.
  rpc DeleteAgent(DeleteAgentRequest) returns (DeleteAgentResponse) {}
}

// Agent represents a complete agent entity with metadata, specification, and status.
message Agent {
  // Metadata contains immutable and system-managed fields about the agent.
  AgentMetadata metadata = 1;
  // Spec contains the desired state of the agent, configured by the user.
  AgentSpec spec = 2;
}

// AgentMetadata contains system-managed, immutable information about an agent.
message AgentMetadata {
  // id is the unique identifier for the agent (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];

  // created_at is the timestamp when the agent was created.
  google.protobuf.Timestamp created_at = 2 [(buf.validate.field).required = true];

  // updated_at is the timestamp when the agent was last modified.
  google.protobuf.Timestamp updated_at = 3 [(buf.validate.field).required = true];
}

// AgentSpec defines the user-configurable specification of an agent.
message AgentSpec {
  // name is the human-readable name of the agent (1-255 characters).
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];

  // description provides a brief summary of the agent's purpose (max 2048 characters).
  string description = 2 [(buf.validate.field).string.max_len = 2048];

  // instructions define the agent's behavior and capabilities (1-10000 characters).
  string instructions = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 65536
  ];

  // model_id references the AI model that powers this agent (UUID format).
  string model_id = 4 [(buf.validate.field).string.uuid = true];
}

// CreateAgentRequest contains the parameters needed to create a new agent.
message CreateAgentRequest {
  // name is the human-readable name for the new agent (1-255 characters).
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];

  // description provides a brief summary of the agent's purpose (max 2048 characters).
  string description = 2 [(buf.validate.field).string.max_len = 2048];

  // instructions define the agent's behavior and capabilities (1-65536 characters).
  string instructions = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 65536
  ];

  // model_id references the AI model that will power this agent (UUID format).
  string model_id = 4 [(buf.validate.field).string.uuid = true];
}

// CreateAgentResponse contains the newly created agent.
message CreateAgentResponse {
  // agent is the newly created agent instance.
  Agent agent = 1 [(buf.validate.field).required = true];
}

// GetAgentRequest specifies which agent to retrieve.
message GetAgentRequest {
  // id is the unique identifier of the agent to retrieve (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];
}

// GetAgentResponse contains the requested agent.
message GetAgentResponse {
  // agent is the requested agent instance.
  Agent agent = 1 [(buf.validate.field).required = true];
}

// ListAgentsRequest specifies parameters for listing agents with optional filtering and pagination.
message ListAgentsRequest {
  // Filter specifies criteria for narrowing the list of returned agents.
  message Filter {
    // names filters agents by their names (max 64 unique names, each 1-255 characters).
    repeated string names = 1 [
      (buf.validate.field).repeated.items.string.min_len = 1,
      (buf.validate.field).repeated.items.string.max_len = 255,
      (buf.validate.field).repeated.max_items = 64,
      (buf.validate.field).repeated.unique = true
    ];
  }

  // filter specifies criteria for narrowing the results.
  Filter filter = 1;

  // page_size limits the number of agents returned per page (1-100).
  optional int32 page_size = 2 [
    (buf.validate.field).int32.gte = 1,
    (buf.validate.field).int32.lte = 100
  ];

  // page_token is used for pagination to retrieve subsequent pages.
  string page_token = 3 [(buf.validate.field).string.max_len = 255];

  // sort_field specifies which field to sort results by.
  optional SortField sort_field = 4 [(buf.validate.field).enum.defined_only = true];

  // sort_order specifies the sorting direction (ascending or descending).
  optional SortOrder sort_order = 5 [(buf.validate.field).enum.defined_only = true];
}

// ListAgentsResponse contains the list of agents matching the request criteria.
message ListAgentsResponse {
  // agents is the list of agents matching the filter criteria.
  repeated Agent agents = 1;

  // next_page_token is used to retrieve the next page of results (empty if no more pages).
  string next_page_token = 2;
}

// UpdateAgentRequest specifies which agent to update and the new values for its fields.
message UpdateAgentRequest {
  // id is the unique identifier of the agent to update (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];

  // name is the new name for the agent (1-255 characters, optional).
  optional string name = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];

  // description is the new description for the agent (max 1000 characters, optional).
  optional string description = 3 [(buf.validate.field).string.max_len = 1000];

  // instructions are the new instructions for the agent (1-65536 characters, optional).
  optional string instructions = 4 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 65536
  ];

  // model_id is the new model reference for the agent (UUID format, optional).
  optional string model_id = 5 [(buf.validate.field).string.uuid = true];
}

// UpdateAgentResponse contains the updated agent.
message UpdateAgentResponse {
  // agent is the updated agent instance.
  Agent agent = 1 [(buf.validate.field).required = true];
}

// DeleteAgentRequest specifies which agent to delete.
message DeleteAgentRequest {
  // id is the unique identifier of the agent to delete (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];
}

// DeleteAgentResponse confirms the agent deletion (empty response).
message DeleteAgentResponse {}
