syntax = "proto3";

package construct.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/type/decimal.proto";

option go_package = "github.com/furisto/construct/api/go/v1";

service ModelService {
  rpc CreateModel(CreateModelRequest) returns (CreateModelResponse) {}
  rpc GetModel(GetModelRequest) returns (GetModelResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc UpdateModel(UpdateModelRequest) returns (UpdateModelResponse) {}
  rpc DeleteModel(DeleteModelRequest) returns (DeleteModelResponse) {}
}

message ModelMetadata {
  google.protobuf.Timestamp created_at = 1 [(buf.validate.field).required = true];
  google.protobuf.Timestamp updated_at = 2 [(buf.validate.field).required = true];
}

enum ModelCapability {
  MODEL_CAPABILITY_UNSPECIFIED = 0;
  MODEL_CAPABILITY_IMAGE = 1;
  MODEL_CAPABILITY_COMPUTER_USE = 2;
  MODEL_CAPABILITY_PROMPT_CACHE = 3;
  MODEL_CAPABILITY_THINKING = 4;
}

message ModelPricing {
  google.type.Decimal input_cost = 1;
  google.type.Decimal output_cost = 2;
  google.type.Decimal cache_write_cost = 3;
  google.type.Decimal cache_read_cost = 4;
}

message Model {
  string id = 1 [(buf.validate.field).string.uuid = true];
  ModelMetadata metadata = 2;
  string name = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];
  string model_provider_id = 4 [(buf.validate.field).string.uuid = true];
  repeated ModelCapability capabilities = 5;
  ModelPricing pricing = 6;
  int64 context_window = 7 [(buf.validate.field).int64.gt = 0];
  bool enabled = 8;
}

message CreateModelRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];
  string model_provider_id = 2 [(buf.validate.field).string.uuid = true];
  repeated ModelCapability capabilities = 3;
  ModelPricing pricing = 4;
  int64 context_window = 5 [(buf.validate.field).int64.gt = 0];
}

message CreateModelResponse {
  Model model = 1 [(buf.validate.field).required = true];
}

message GetModelRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetModelResponse {
  Model model = 1 [(buf.validate.field).required = true];
}

message ListModelsRequest {
  message Filter {
    optional string model_provider_id = 1 [(buf.validate.field).string.uuid = true];
    optional bool enabled = 2;
    optional string name = 3 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 255];
  }
  Filter filter = 1;
  string page_token = 2 [(buf.validate.field).string.max_len = 255];
}

message ListModelsResponse {
  repeated Model models = 1;
  string next_page_token = 2;
}

message UpdateModelRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  optional string name = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];
  optional string model_provider_id = 3 [(buf.validate.field).string.uuid = true];
  repeated ModelCapability capabilities = 4;
  optional ModelPricing pricing = 5;
  optional int64 context_window = 6 [(buf.validate.field).int64.gt = 0];
  optional bool enabled = 7;
}

message UpdateModelResponse {
  Model model = 1 [(buf.validate.field).required = true];
}

message DeleteModelRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteModelResponse {}
